# classifier-trains

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  main.py
.github/: CODEOWNERS
.github/workflows/: main.yml  release.yml
TCPyTorch/: main.py
TCPyTorch/utils/: __init__.py  common.py  constants.py  env.py  evaluation.py  export.py  logger.py  model.py  preprocessing.py  training.py  visualization.py
config/: config.yml
configs/: train.yml
docs/: README.md
pipeline/: Dockerfile  Makefile  README.md  pyproject.toml  setting.yml
pipeline/src/: env.py  logger.py  main.py
pipeline/src/core/: control.py  utils.py
pipeline/src/core/data/: mapping.py
pipeline/src/core/model/: initialize.py  train.py
pipeline/src/core/visualization/: dataset.py
pipeline/src/tests/: test_setting.yml
pipeline/src/tests/core/: test_control.py
src/: .dockerignore  .pipeline-env  Makefile  README.md  pipeline_setting.yml  pyproject.toml  requirements.txt  setting.yml
src/classifier_trains/: __init__.py  __main__.py  version.py
src/classifier_trains/core/: __init__.py  interface.py
src/classifier_trains/core/loading/: __init__.py  dataloader.py
src/classifier_trains/core/model/: __init__.py  classifier.py  facade.py  utils.py
src/classifier_trains/core/preprocessing/: __init__.py  augmentation.py  processor.py  resize_and_padding.py
src/classifier_trains/schemas/: config.py  constants.py  pipeline.py
src/classifier_trains/utils/: env.py  file.py  logger.py
src/deployment/: Dockerfile
src/docker/: Dockerfile
src/pipeline/: __main__.py  env.py  logger.py  main.py
src/pipeline/core/: __init__.py  control.py  facade.py  interface.py  utils.py
src/pipeline/core/data/: __init__.py  mapping.py  preprocessing.py
src/pipeline/core/dataloader/: __init__.py  dataloader.py  utils.py
src/pipeline/core/loading/: __init__.py  dataloader.py
src/pipeline/core/model/: __init__.py  classifier.py  facade.py  inference.py  initialize.py  load.py  train.py  utils.py
src/pipeline/core/preprocessing/: __init__.py  augmentation.py  denormalization.py  processor.py  resize_and_padding.py
src/pipeline/core/visualization/: __init__.py  base.py  dataset.py  performance.py  visualizer.py
src/pipeline/schemas/: __init__.py  config.py  constants.py  pipeline.py  visualization.py
src/pipeline/utils/: env.py  file.py  logger.py
src/tests/: test_setting.yml
src/tests/core/: test_control.py
src/tests/end-to-end-test/: test_compute_mean_and_std.py  test_evaluation.py  test_get_output_mapping.py  test_import.py  test_training.py
src/tests/test_data/: full_pipeline_config.yml  pipeline_config.yml  pipeline_config_only_eval.yml  pipeline_config_only_train.yml  test_load_yml.yml
src/tests/unit-test/: test_file_utils.py  test_init_classifier.py  test_init_dataloader_config.py  test_init_evaluation_config.py  test_init_logger.py  test_init_model_config.py  test_init_optimizer.py  test_init_pipeline_config.py  test_init_preprocessing_config.py  test_init_scheduler.py  test_init_training_config.py  test_phase_as_prefix.py
tcpytorch/: Makefile  README.md  pyproject.toml  setting.yml  train.yml
tcpytorch/src/: env.py  logger.py  main.py
tcpytorch/src/core/: __init__.py  args.py  control.py  model.py  preprocessing.py  training.py
tcpytorch/src/core/data/: __init__.py  mapping.py  preprocessing.py
tcpytorch/src/core/model/: __init__.py  inference.py  initialize.py  load.py  train.py
tcpytorch/src/core/visualization/: __init__.py  base.py  dataset.py  performance.py
tcpytorch/src/schemas/: __init__.py  constants.py
utils/: common.py  evaluation.py  export.py  logger.py  model.py  preprocessing.py  training.py  visualization.py
