[tool.poetry]
name = "classifier_trains"
version = "1.2.1"
description = "A PyTorch-based deep learning classifier training framework."
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/classifier_trains/"
repository = "https://github.com/wyhwong/classifier-trains"
keywords = ["pytorch", "deep learning", "image classification"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
pydantic = "^2.8.2"
click = "^8.1.7"
# Dependencies for model training
lightning = "^2.4.0"
numpy = "^2.0.2"
onnx = "^1.15.0"
# Dependencies for visualization
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
tensorboard = "^2.17.0"
torch-tb-profiler = "^0.4.3"

[tool.poetry.group.cuda.dependencies]
torch = {version = "^2.7.0", source = "pytorch-cuda"}
torchvision = {version = "^0.22.0+cu126", source = "pytorch-cuda"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
ipykernel = "^6.29.5"
pyinstrument = "^4.7.2"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2
profile = "black"
