[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
numpy = "^1.26.3"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
opencv-python = "^4.9.0.80"
onnx = "^1.15.0"
scikit-learn = "^1.4.0"
torch = "^2.1.2"
torchvision = "^0.16.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
bandit = "^1.7.7"
pylint = "^3.0.3"
isort = "^5.13.2"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[tool.bandit]
exclude_dirs = ["tests",]

[tool.mypy]
exclude = ["tests",]

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
